Responsive styling changes. Form for adding todos has margins on smaller screens. Filter options now correctly switch between flex-column and flex-row.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,5 @@
 .App {
-  width: 720px;
-  margin: auto;
+  width: 100%;
 }
 
 .cursor-pointer {
@@ -23,21 +22,22 @@ input[type='checkbox']:checked + .todo-title {
 .status-filter {
   display: flex;
   flex-direction: row;
+  gap: 0.5rem;
 }
 
 .status-filter > label {
   display: flex;
   flex-direction: row;
+  cursor: pointer;
 }
 
 .status-filter > label > input {
   margin: 0 0.25rem;
 }
 
-@media (max-width: 720px) {
+@media (min-width: 720px) {
   .App {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+    width: 720px;
+    margin: auto;
   }
 }
